# aoc

./: README.md  lib.ml
19/: .gitignore  day1.ml  day10.ml  day11.ml  day11p2.ml  day12.ml  day12p2.ml  day13.ml  day13p2.ml  day14.ml  day15.ml  day15p2.ml  day16.ml  day16p2.ml  day17.ml  day17p2.ml  day18.ml  day18p2.ml  day19.ml  day19p2.ml  day1p2.ml  day2.ml  day20.ml  day20p2.ml  day21.ml  day22.ml  day22p2.ml  day23.ml  day23p2.ml  day24.ml  day24p2.ml  day25.ml  day2p2.ml  day3.ml  day3p2.ml  day4.ml  day5.ml  day6.ml  day6p2.ml  day7.ml  (+7 more)
23/: .gitignore  day1.ml  day1.s  day10.ml  day10p2.ml  day11.ml  day12.ml  day13.ml  day13p2.ml  day14.ml  day14p2.ml  day15.ml  day15p2.ml  day16.ml  day17.ml  day17p2.ml  day18.ml  day18p2.ml  day19.ml  day1p2.ml  day2.ml  day20.ml  day21.ml  day21hl.ml  day21p2.ml  day22.ml  day23.ml  day24.ml  day24p2.ml  day25.ml  day2p2.ml  day3.ml  day3p2.ml  day4.ml  day4p2.ml  day5.ml  day5p2.ml  day6.ml  day7.ml  day7p2.ml  (+7 more)
24/: day1.ml  day10.ml  day10p2.ml  day11.ml  day12.ml  day12p2.ml  day13.ml  day14.ml  day14p2.ml  day15.ml  day15p2.ml  day16.ml  day17.ml  day18.ml  day18p2.ml  day19.ml  day19p2.ml  day1p2.ml  day2.ml  day20.ml  day20p2.ml  day21.ml  day21p2.ml  day22.ml  day22p2.ml  day23.ml  day23p2.ml  day24.ml  day24p2.ml  day25.ml  day2p2.ml  day3.mll  day3p2.mll  day4.ml  day4p2.ml  day5.ml  day5p2.ml  day6.ml  day6p2.ml  day7.ml  (+7 more)
25/: .gitignore  day1.ml  day10.ml  day10p2.ml  day11.ml  day11p2.ml  day12.ml  day1p2.ml  day2.ml  day2p2.ml  day3.ml  day3p2.ml  day4.ml  day4p2.ml  day5.ml  day5p2.ml  day6.ml  day6p2.ml  day7.ml  day7p2.ml  day8.ml  day8p2.ml  day9.ml  day9p2.ml  dune  lib.ml
