(env
 (dev
  (flags ())))
  ;; (flags (:standard -w -27-26-32))))

(library
 (name lib)
 (modules lib))

(executable
 (name day1)
 (promote (until-clean))
 (modules day1)
 (libraries lib grid))
(executable
 (name day1p2)
 (promote (until-clean))
 (modules day1p2)
 (libraries lib grid))

(executable
 (name day2)
 (promote (until-clean))
 (modules day2)
 (libraries lib grid))
(executable
 (name day2p2)
 (promote (until-clean))
 (modules day2p2)
 (libraries lib grid))

(executable
 (name day3)
 (promote (until-clean))
 (modules day3)
 (libraries lib grid))
(executable
 (name day3p2)
 (promote (until-clean))
 (modules day3p2)
 (libraries lib grid))

(executable
 (name day4)
 (promote (until-clean))
 (modules day4)
 (libraries lib grid))

(library
 (name machine)
 (modules machine)
 (libraries lib))

(executable
 (name day5)
 (promote (until-clean))
 (modules day5)
 (libraries machine lib grid))

(executable
 (name day6)
 (promote (until-clean))
 (modules day6)
 (libraries lib grid))
(executable
 (name day6p2)
 (promote (until-clean))
 (modules day6p2)
 (libraries lib grid))
