(env
 (dev
  (flags ())))
  ;; (flags (:standard -w -27-26-32))))

(library
 (name lib)
 (modules lib))

(executable
 (name day1)
 (promote (until-clean))
 (modules day1)
 (libraries lib grid))
(executable
 (name day1p2)
 (promote (until-clean))
 (modules day1p2)
 (libraries lib grid))

(executable
 (name day2)
 (promote (until-clean))
 (modules day2)
 (libraries lib grid))
(executable
 (name day2p2)
 (promote (until-clean))
 (modules day2p2)
 (libraries lib grid))

(executable
 (name day3)
 (promote (until-clean))
 (modules day3)
 (libraries lib grid))
(executable
 (name day3p2)
 (promote (until-clean))
 (modules day3p2)
 (libraries lib grid))

(executable
 (name day4)
 (promote (until-clean))
 (modules day4)
 (libraries lib grid))

(library
 (name machine)
 (modules machine)
 (libraries lib))

(executable
 (name day5)
 (promote (until-clean))
 (modules day5)
 (libraries machine lib grid))

(executable
 (name day6)
 (promote (until-clean))
 (modules day6)
 (libraries lib grid))
(executable
 (name day6p2)
 (promote (until-clean))
 (modules day6p2)
 (libraries lib grid))

(executable
 (name day7)
 (promote (until-clean))
 (modules day7)
 (libraries machine lib grid))
(executable
 (name day7p2)
 (promote (until-clean))
 (modules day7p2)
 (libraries machine lib grid))

(executable
 (name day8)
 (promote (until-clean))
 (modules day8)
 (libraries machine lib grid))
(executable
 (name day8p2)
 (promote (until-clean))
 (modules day8p2)
 (libraries machine lib grid))

(executable
 (name day9)
 (promote (until-clean))
 (modules day9)
 (libraries machine lib grid))

(executable
 (name day10)
 (promote (until-clean))
 (modules day10)
 (libraries machine lib grid))

(executable
 (name day11)
 (promote (until-clean))
 (modules day11)
 (libraries machine lib grid))
(executable
 (name day11p2)
 (promote (until-clean))
 (modules day11p2)
 (libraries machine lib grid))

(executable
 (name day12)
 (promote (until-clean))
 (modules day12)
 (libraries machine lib grid))
(executable
 (name day12p2)
 (promote (until-clean))
 (modules day12p2)
 (libraries machine lib grid))

(executable
 (name day13)
 (promote (until-clean))
 (modules day13)
 (libraries machine lib grid))
(executable
 (name day13p2)
 (promote (until-clean))
 (modules day13p2)
 (libraries graphics machine lib grid))

(executable
 (name day14)
 (promote (until-clean))
 (modules day14)
 (libraries lib grid))

(executable
 (name day15)
 (promote (until-clean))
 (modules day15)
 (libraries machine lib grid))
(executable
 (name day15p2)
 (promote (until-clean))
 (modules day15p2)
 (libraries machine lib grid))

(executable
 (name day17)
 (promote (until-clean))
 (modules day17)
 (libraries machine lib grid))
(executable
 (name day17p2)
 (promote (until-clean))
 (modules day17p2)
 (libraries machine lib grid))
