(env
 (dev
  (flags ())))
  ;; (flags (:standard -w -27-26-32))))

(library
 (name lib)
 (modules lib))

(executable
 (name day10)
 (promote (until-clean))
 (modules day10)
 (libraries lib grid))
(executable
 (name day10p2)
 (promote (until-clean))
 (modules day10p2)
 (libraries lib grid))

(executable
 (name day11)
 (promote (until-clean))
 (modules day11)
 (libraries lib grid))

(executable
 (name day12)
 (promote (until-clean))
 (modules day12)
 (libraries lib grid))

(executable
 (name day13)
 (promote (until-clean))
 (modules day13)
 (libraries lib grid))

(executable
 (name day13p2)
 (promote (until-clean))
 (modules day13p2)
 (libraries lib grid))

(executable
 (name day14)
 (promote (until-clean))
 (modules day14)
 (libraries lib grid))

(executable
 (name day14p2)
 (promote (until-clean))
 (modules day14p2)
 (libraries lib grid))

