(env
 (dev
  (flags ())))
  ;; (flags (:standard -w -27-26-32))))

(library
 (name lib)
 (modules lib))

(executable
 (name day10)
 (promote (until-clean))
 (modules day10)
 (libraries lib grid))
(executable
 (name day10p2)
 (promote (until-clean))
 (modules day10p2)
 (libraries lib grid))

(executable
 (name day11)
 (promote (until-clean))
 (modules day11)
 (libraries lib grid))

(executable
 (name day12)
 (promote (until-clean))
 (modules day12)
 (libraries lib grid))

(executable
 (name day13)
 (promote (until-clean))
 (modules day13)
 (libraries lib grid))

(executable
 (name day13p2)
 (promote (until-clean))
 (modules day13p2)
 (libraries lib grid))

(executable
 (name day14)
 (promote (until-clean))
 (modules day14)
 (libraries lib grid))

(executable
 (name day14p2)
 (promote (until-clean))
 (modules day14p2)
 (libraries lib grid))

(executable
 (name day15)
 (promote (until-clean))
 (modules day15)
 (libraries lib grid))

(executable
 (name day15p2)
 (promote (until-clean))
 (modules day15p2)
 (libraries lib grid))

(executable
 (name day16)
 (promote (until-clean))
 (modules day16)
 (libraries lib grid))

(executable
 (name day17)
 (promote (until-clean))
 (modules day17)
 (libraries ocamlgraph lib grid))

(executable
 (name day17p2)
 (promote (until-clean))
 (modules day17p2)
 (libraries ocamlgraph lib grid))

(executable
 (name day18)
 (promote (until-clean))
 (modules day18)
 (libraries lib grid))

(executable
 (name day18p2)
 (promote (until-clean))
 (modules day18p2)
 (libraries lib grid))

(executable
 (name day19)
 (promote (until-clean))
 (modules day19)
 (libraries lib grid))

(executable
 (name day20)
 (promote (until-clean))
 (modules day20)
 (libraries lib grid))

(executable
 (name day21)
 (promote (until-clean))
 (modules day21)
 (libraries lib grid))

(executable
 (name day21p2)
 (promote (until-clean))
 (modules day21p2)
 (libraries lib grid))

(executable
 (name day21hl)
 (promote (until-clean))
 (modules day21hl)
 (libraries lib grid))

(executable
 (name day22)
 (promote (until-clean))
 (modules day22)
 (libraries lib grid))

(executable
 (name day23)
 (promote (until-clean))
 (modules day23)
 (libraries lib grid))

