(env
 (dev
  (flags ())))
  ;; (flags (:standard -w -27-26-32))))

(library
 (name lib)
 (modules lib))

(executable
 (name day1)
 (promote (until-clean))
 (modules day1)
 (libraries lib grid))

(executable
 (name day1p2)
 (promote (until-clean))
 (modules day1p2)
 (libraries lib grid))

(executable
 (name day2)
 (promote (until-clean))
 (modules day2)
 (libraries lib grid))

(executable
 (name day2p2)
 (promote (until-clean))
 (modules day2p2)
 (libraries lib grid))

(executable
 (name day3)
 (promote (until-clean))
 (modules day3)
 (libraries lib grid))

(executable
 (name day3p2)
 (promote (until-clean))
 (modules day3p2)
 (libraries lib grid))

(executable
 (name day4)
 (promote (until-clean))
 (modules day4)
 (libraries lib grid))

(executable
 (name day4p2)
 (promote (until-clean))
 (modules day4p2)
 (libraries lib grid))

(executable
 (name day5)
 (promote (until-clean))
 (modules day5)
 (libraries lib grid))

(executable
 (name day5p2)
 (promote (until-clean))
 (modules day5p2)
 (libraries lib grid))

(executable
 (name day6)
 (promote (until-clean))
 (modules day6)
 (libraries lib grid))

(executable
 (name day6p2)
 (promote (until-clean))
 (modules day6p2)
 (libraries lib grid))

(executable
 (name day7)
 (promote (until-clean))
 (modules day7)
 (libraries lib grid))

(executable
 (name day7p2)
 (promote (until-clean))
 (modules day7p2)
 (libraries lib grid))

(executable
 (name day8)
 (promote (until-clean))
 (modules day8)
 (libraries lib grid))

(executable
 (name day8p2)
 (promote (until-clean))
 (modules day8p2)
 (libraries lib grid))

(executable
 (name day9)
 (promote (until-clean))
 (modules day9)
 (libraries lib grid))

(executable
 (name day9p2)
 (promote (until-clean))
 (modules day9p2)
 (libraries graphics lib grid))

(executable
 (name day10)
 (promote (until-clean))
 (modules day10)
 (libraries lib grid))

(executable
 (name day10p2)
 (promote (until-clean))
 (modules day10p2)
 (libraries zarith lib grid))

(executable
 (name day10p2z3)
 (promote (until-clean))
 (modules day10p2z3)
 (libraries zarith lib grid))

(executable
 (name day11)
 (promote (until-clean))
 (modules day11)
 (libraries lib grid))

(executable
 (name day11p2)
 (promote (until-clean))
 (modules day11p2)
 (libraries lib grid))

(executable
 (name day12)
 (promote (until-clean))
 (modules day12)
 (libraries combine lib grid))
